添加了轮播

--- a/info.html
+++ b/info.html
@@ -14,9 +14,9 @@
 	<body>
 		<div class="swiper-container">
 			<div class="swiper-wrapper">
-				<div class="swiper-slide">Slide 1</div>
-				<div class="swiper-slide">Slide 2</div>
-				<div class="swiper-slide">Slide 3</div>
+				<div class="swiper-slide"><img src="https://ss1.bdstatic.com/70cFvXSh_Q1YnxGkpoWK1HF6hhy/it/u=3079125618,2772964547&fm=27&gp=0.jpg" ></div>
+				<div class="swiper-slide"><img src="http://img2.imgtn.bdimg.com/it/u=2241068275,3424276325&fm=26&gp=0.jpg" ></div>
+				<div class="swiper-slide"><img src="http://img2.imgtn.bdimg.com/it/u=3245015536,3374274410&fm=26&gp=0.jpg" ></div>
 			</div>
 			<!-- 如果需要分页器 -->
 			<div class="swiper-pagination"></div>
